--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,21 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.redhat</groupId>
-	<artifactId>aggregator</artifactId>
+	<artifactId>tqadri-aggregator</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<name>aggregator</name>
 	<packaging>pom</packaging>
 
 	<modules>
-		<module>domain</module>
-		<module>kie-services</module>
+		<module>tqadri-domain</module>
+		<module>tqadri-kie-services</module>
 	</modules>
+	
+	<distributionManagement>
+		<snapshotRepository>
+			<id>deployment</id>
+			<url>http://nexus-rhcbap.rhcloud.com/nexus/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
 
 </project>
