--- a/tqadri-kie-services/pom.xml
+++ b/tqadri-kie-services/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.redhat</groupId>
-	<artifactId>kie-services</artifactId>
+	<artifactId>tqadri-kie-services</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
@@ -20,12 +20,12 @@
 		<!-- project dependencies -->
 		<dependency>
 			<groupId>com.redhat</groupId>
-			<artifactId>domain</artifactId>
+			<artifactId>tqadri-domain</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.redhat</groupId>
-			<artifactId>knowledge</artifactId>
+			<artifactId>tqadri-knowledge</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
